2020-06-05  Benjamin Yang  <be11ng@protonmail.com>

	* Makefile: Add nethack-compat.el to rule all.
	* nethack-compat.el (cl): Change cl to cl-lib.
	* nethack-compat.el: Change all instances of case to cl-case.
	* nethack-api.el: Likewise.
	* nh-bot.el: Likewise, and change first to cl-first and find to
	cl-find.

2020-06-04  Benjamin Yang  <be11ng@protonmail.com>

	* nethack-api.el: Add file local variable to enable lexical scope.
	* nethack-cmd.el: Likewise.
	* nethack-compat.el: Likewise.
	* nethack-example.el: Likeewise.
	* nethack-keys.el: Likeewise.
	* nethack-nhlaunch.el: Likeewise.
	* nethack.el: Likeewise.
	* nh-bot.el: Likeewise.

2020-05-29  Evan Izaksonas-Smith  <izak0002@dev.null>

	* nethack-keys.el (nh-mode-map): Added binding for riding and
	rubbing.

2020-05-28  Benjamin Yang  <be11ng@protonmail.com>

	* nethack-api.el (nhapi-restore-window-configuration): If
	nh-map-buffer or nh-menu-buffer-table are not defined, create the
	relevant windows.
	(nhapi-create-map-window): If already there, don't make another
	one.
	(nhapi-create-inventory-window): Likewise.

2020-05-27  PJ Weisberg <pj@irregularexpressions.net>

	* nethack-api.el: Replace use of obsolete last-command-char with
	last-command-event.
	* nh-bot.el: Likewise.

	* nethack-api.el (nh-propertize-attribute): Add logic to handle
	strength between 18 and 19

	* nethack.el (nh-status-mode): Create mode for Nethack status
	buffer
	* nethack-api.el (nhapi-create-status-window): Make status buffer
	use the new mode
	(nh-print-status): Deal with the fact that the new mode makes the
	buffer read-only.

	* nethack.el (nh-message-mode): Create new major mode, for an easy
	place to hang hooks to be run in the message window.
	* nethack-api.el (nhapi-create-message-window): Deal with the fact
	that I made nh-message-mode set the buffer read-only
	* nethack-compat.el (nh-message): Likewise

2020-05-27  Benjamin Yang  <be11ng@protonmail.com>
